Translate the info page & fix a bug with the trip classification

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -127,6 +127,56 @@
         "commentGoodForHealth": "Nothing's better for health!"
     },
 
+    "infos": {
+        "learnMore": "Learn more",
+        "carbonFootprint?": "What’s a carbon footprint?",
+        "carbonFootprintExplanation": "The carbon footprint is the sum of greenhouse gas (GHG) emitted by the activity of a person, group, organization, industry, etc. It’s the tool to account of these emissions.",
+        "carbonsumPartialReport": "CarbonSum is not doing a full carbon footprint but focus on the various greenhouse gas emissions related to your travels (personal or professional).",
+        "howIsItComputed?": "How CarbonSum computes the carbon footprint?",
+        "historyPosition": "CarbonSum uses your location history from Google Maps. It is necessary to have this feature enabled in order to automatically computes your carbon footprint. Thanks to the location of your smartphone, Google Maps will estimate the means of transport used and over what distance.",
+        "whereDataFrom": "Each means of transportation does not emit the same amount of CO2 equivalent greenhouse gases (called emission factor). CarbonSum is based on figures proposed by ADEME, the French Environment and Energy Management Agency (reference in France).",
+        "eCO2Explanation": "Those values are converted into an equivalent CO2. Each greenhouse gas has its own Global Warming Potential (GWP). This is a function of their ability to retain solar radiation. It also takes into account their lifetime in the atmosphere. The GWP data used are those of the 5th report of the IPCC (2014, latest to date).",
+        "seeBelowForData": "The values used in CarbonSum are summarized in the following table.",
+        "dataTableTitle": "Data used on CarbonSum in order to generate the reports",
+        "meansOfTransportation": "Means of transportation",
+        "carAverage": "Car (French average)",
+        "carAveragePetrol": "Car (French average, gasoline)",
+        "carAverageDiesel": "Car (French average, diesel)",
+        "carCompactElectric": "Car (electric compact)",
+        "carSedanElectric": "Car (selectric sedan)",
+        "TGV": "TGV (French high-speed train)",
+        "RER": "RER (French medium-speed train (urban))",
+        "TER": "TER (French medium-speed train)",
+        "subway": "Subway",
+        "bus": "Bus",
+        "tramway": "Tramway",
+        "moto": "Moto",
+        "explanationAvgPeopleCar": "Note that emissions related to car travel are by default divided by {{ avgNbPeopleCar }}. It is indeed the average number of passengers by car according to ADEME.",
+        "planeExplanation": "Regarding air transport, the emission per kilometer are modulated according to the distance (short, medium, long haul).",
+        "emissionFactorPlane": "Air transport emission factors used by CarbonSum",
+        "type": "Type",
+        "distance": "Distance",
+        "shortHaul": "Short haul",
+        "middleHaul": "Medium haul",
+        "longHaul": "Long haul",
+        "shortHaulDistance": "0-1000 km (0-621 mi)",
+        "middleHaulDistance": "1000-3500 km (621-2174 mi)",
+        "longHaulDistance": ">3500 km (>2174 mi)",
+        "carbonsumReliable?": "Is CarbonSum a reliable tool?",
+        "carbonsumReliableGMaps": "CarbonSum offers only an estimate of your transport-related emissions. Its reliability depends on a multitude of parameters. The first is whether your journeys are well referenced in Google Maps. To check this, we invite you to go to the \"My trips\" tab on Google Maps. The accuracy of these references depends on your phone and its settings.",
+        "uncertaintyData": "If these data are well filled in, the result should be globally relevant. It should not be believed with certainty and a margin of imprecision should be taken into account. Uncertainties in the data provided by ADEME depend on the means of transport.",
+        "canIUseCSEverywhere": "Can I use CarbonSum worldwide?",
+        "carbonsumUsesFrenchData": "CarbonSum is currently only available in French and English. But for the moment we only use French data. A train journey will not have exactly the same average emissions in France or in the United States for example (electric vs diesel train). Its relevance may be reduced if you travel mostly outside metropolitan France.",
+        "whatCanIDoDecreaseCarbonFootprint": "What can I do to decrease my carbon footprint?",
+        "toDecreaseCarbonFootprintTransport": "As far as transportation is concerned, using public transportation as much as possible (easier in the city), and preferring the train to the plane for long trips, are good options. You can see numerically above the emissions of each mode of transportation.",
+        "youCanAlsoOffset": "You can also donate to organizations that offset greenhouse gas emissions. CarbonSum will soon offer you the possibility to do so directly via the application.",
+        "howToGiveFeedback": "How to give feedback to this application?",
+        "gForm": "If you find a bug or have a suggestion for improvement, you are invited to do so via the following form:",
+        "giveFeedbackCS": "Give feedback to CarbonSum",
+        "emailAlsoAvailable": "You can also send me a mail:",
+        "giveFeedbackSocialNetworks": "We are also at your disposal on social networks (Twitter, Facebook, Instagram). The links are available on the page Parameter."
+    },
+
     "help": {
         "help": "Help",
         "connectedButNoTrips": "I am connected with my Google account but I have no trips",
