Fixing a spelling mistake

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -65,7 +65,7 @@
 
         "objective": "Objectif",
         "year": "année",
-        "explanationObjective": "Afin de respecter l'accord de Paris qui vise à limiter le réchauffement climatique à 2°C. Nous ne pourrons produire plus que 2,1 tonnes de CO2e par an et par personne 2100. Choisissez une année et nous convertirons votre objectif en CO2e. Nous divisons par 4 ce chiffres étant donné que les transports représentent environ 25% de l'empreinte carbone d'un français."
+        "explanationObjective": "Afin de respecter l'accord de Paris qui vise à limiter le réchauffement climatique à 2°C. Nous ne pourrons produire plus que 2,1 tonnes de CO2e par an et par personne 2100. Choisissez une année et nous convertirons votre objectif en CO2e. Nous divisons par 4 ce chiffre étant donné que les transports représentent environ 25% de l'empreinte carbone d'un français."
     },
 
     "display-report": {
