--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -89,7 +89,9 @@
         "butItsCurrentMonth": "C'est normal dans la mesure où ce rapport reflète le mois courant, qui n'est pas encore finalisé.",
         "consequenceOfMove": "d'équivalent CO2 émis en conséquence de vos déplacements.",
         "including": "dont",
-        "relatedToYourMoves": "liés à vos déplacements en"
+        "relatedToYourMoves": "liés à vos déplacements en",
+
+        "offset": "Compenser"
     },
 
     "add-move": {
@@ -194,5 +196,16 @@
         "weDoNotUseYourData": "CarbonSum utilise l’historique de vos trajets Google Maps seulement pour calculer votre impact carbone, nous ne stockons pas ou utilisons vos données.",
         "youCanStop": "Vous pouvez à tout moment dissocier votre compte Google et aucune données ne sera enregistrées.",
         "ignore": "Ignorer"
+    },
+
+    "offset": {
+        "TITLE": "Compenser",
+        "offset": "Compenser",
+        "afforestation": "Boisement",
+        "inFrance": "en France",
+        "lowCarbonLabelFrenchMinistery": "Labellisé Bas-Carbone auprès du Ministère de la Transition Ecologique et Solidaire",
+        "STOCK_explanation": "Afin de proposer ce service de compensation carbone, nous avons noué un partenariat avec STOCK; startup dédiée à la compensation carbone sur le territoire français, utilisant un label développé par le Ministère de la Transition Écologique et Solidaire.",
+        "whatIsOffsetting_title": "Qu'est-ce que compenser ?",
+        "whatIsOffsetting_explanation": "Compenser, c'est contribuer au financement de projets de réduction ou de séquestration carbone, de manière à contrebalancer ses propres émissions résiduelles de gaz à effet de serre."
     }
 }
