[FEAT] Improving the text on the offsetting page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -203,7 +203,7 @@
         "offset": "Compenser",
         "afforestation": "Boisement",
         "inFrance": "en France",
-        "lowCarbonLabelFrenchMinistery": "Labellisé Bas-Carbone auprès du Ministère de la Transition Ecologique et Solidaire",
+        "lowCarbonLabelFrenchMinistery": "Labellisé Bas-Carbone auprès du Ministère de la Transition Ecologique",
         "STOCK_explanation": "Afin de proposer ce service de compensation carbone, nous avons noué un partenariat avec STOCK; startup dédiée à la compensation carbone sur le territoire français, utilisant un label développé par le Ministère de la Transition Écologique et Solidaire.",
         "whatIsOffsetting_title": "Qu'est-ce que compenser ?",
         "whatIsOffsetting_explanation": "Compenser, c'est contribuer au financement de projets de réduction ou de séquestration carbone, de manière à contrebalancer ses propres émissions résiduelles de gaz à effet de serre."
